--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto = create
 server.port=8080
+
+spring.security.oauth2.client.registration.github.clientId=4b8af7d0b84e4ad134ec
+spring.security.oauth2.client.registration.github.clientSecret=72ee06fc1651fd86a493931a1da208c5cb8b6a24
